bootstrap/cluster-resources/in-cluster/github-runners/namespace-delete.yaml
$patch: delete
apiVersion: v1
kind: Namespace
metadata:
  name: actions-runner-system
