bootstrap/cluster-resources/in-cluster/github-runners/runners.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: github-runners
