bootstrap/cluster-resources/in-cluster/github-runners/controller-manager-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: actions-runner-system
spec:
  template:
    spec:
      containers:
      - name: manager
        args:
          - --metrics-addr=127.0.0.1:8080
          - --enable-leader-election
          - --sync-period=1m
